infra/k8s/api/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: wafizo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: '256Mi'
              cpu: '250m'
            limits:
              memory: '512Mi'
              cpu: '500m'
      volumes:
        - name: postgres-data
          hostPath:
            path: /mnt/data/postgres
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: wafizo
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
