infra/k8s/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: wafizo
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
