infra/k8s/api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: wafizo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.wafizo.fr
      secretName: api-wafizo-fr-tls
  rules:
    - host: api.wafizo.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
